--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,6 @@ body {
 
 footer {
     background: #E9EFF1;
-    margin: -15px;
 }
 
 footer h2 {
